cleaned up scss, improved routing - used mixins for linear gradients - 100% width instead of 100vw width   thus removing scrollbar issue
- projects each have their own partial
- / default loads pixel project
- projects have their own routes
- 404 handling for non-existing projects

However, left/right arrows no longer
function, want to dynamically load
projects as AJAX requests instead.
Will be done in next commit.

--- a/public/css/about.scss
+++ b/public/css/about.scss
@@ -21,7 +21,7 @@
 .content {
   display: flex;
   flex-direction: row;
-  width: 100vw;
+  width: 100%;
 }
 
   .description {
