--- a/public/css/projects.scss
+++ b/public/css/projects.scss
@@ -3,7 +3,7 @@
 .proj_nav_layer {
   z-index: 1;
   position: absolute;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -37,18 +37,19 @@
 }
 
 .projects {
-  width: 100vw;
+  z-index: 0;
+  width: 100%;
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   .project_bg {
-    position: absolute;
     z-index: -1;
+    position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
   }
   .project_title {
@@ -56,6 +57,10 @@
     font-size: 4.5em;
     color: $white;
   }
+}
+
+.gallery_wrapper {
+  width: 100%;
 }
 
   .active { 
@@ -66,34 +71,30 @@
     display: none;
   }
 
+  @mixin linear-gradient($color-1, $color-2) {
+    background: nth(nth($color-1, 1), 1);
+    background : linear-gradient(0deg, $color-1, $color-2);
+    background : -moz-linear-gradient(50% 100% 90deg, $color-1, $color-2);
+    background : -webkit-linear-gradient(90deg, $color-1, $color-2);
+    background : -o-linear-gradient(90deg, $color-1, $color-2);
+    background : -ms-linear-gradient(90deg, $color-1, $color-2);
+  }
+
   .gallery_bg {
-    background : -moz-linear-gradient(50% 100% 90deg,rgba(255, 196, 77, 1) 0%,rgba(255, 220, 110, 1) 91.29%);
-    background : -webkit-linear-gradient(90deg, rgba(255, 196, 77, 1) 0%, rgba(255, 220, 110, 1) 91.29%);
-    background : -webkit-gradient(linear,50% 100% ,50% 0% ,color-stop(0,rgba(255, 196, 77, 1) ),color-stop(0.9129,rgba(255, 220, 110, 1) ));
-    background : -o-linear-gradient(90deg, rgba(255, 196, 77, 1) 0%, rgba(255, 220, 110, 1) 91.29%);
-    background : -ms-linear-gradient(90deg, rgba(255, 196, 77, 1) 0%, rgba(255, 220, 110, 1) 91.29%);
-    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFC44D', endColorstr='#FFDC6E' ,GradientType=0)";
-    background : linear-gradient(0deg, rgba(255, 196, 77, 1) 0%, rgba(255, 220, 110, 1) 91.29%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFDC6E',endColorstr='#FFC44D' , GradientType=0);
+    @include linear-gradient(rgba(255, 196, 77, 1) 0%, rgba(255, 220, 110, 1) 91.29%);
   }
 
   .pixel_bg {
-    background : -moz-linear-gradient(50% 0% -90deg,rgba(241, 114, 127, 1) 0%,rgba(255, 89, 141, 1) 100%);
-    background : -webkit-linear-gradient(-90deg, rgba(241, 114, 127, 1) 0%, rgba(255, 89, 141, 1) 100%);
-    background : -webkit-gradient(linear,50% 0% ,50% 100% ,color-stop(0,rgba(241, 114, 127, 1) ),color-stop(1,rgba(255, 89, 141, 1) ));
-    background : -o-linear-gradient(-90deg, rgba(241, 114, 127, 1) 0%, rgba(255, 89, 141, 1) 100%);
-    background : -ms-linear-gradient(-90deg, rgba(241, 114, 127, 1) 0%, rgba(255, 89, 141, 1) 100%);
-    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#F1727F', endColorstr='#FF598D' ,GradientType=0)";
-    background : linear-gradient(180deg, rgba(241, 114, 127, 1) 0%, rgba(255, 89, 141, 1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#F1727F',endColorstr='#FF598D' , GradientType=0);
+    @include linear-gradient(rgba(255, 89, 141, 1) 0%, rgba(241, 114, 127, 1) 100%);
   }
 
   .gallery {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     .gallery_imgs {
-      width: 100vw;
+      width: 100%;
       display: flex;
       align-items: center;
       justify-content: space-evenly;
